# exercises

./: 001-MultiplyTwoNumbers.cpp  002-ArrayManualAscendingSort.cpp  003-DistanceBetweenSums.cpp  004-RemoveHundreds.cpp  005-PrintNotPrimeNumbers.cpp  006-LessThanLastArray.cpp  007-IncrementOddNumbers.cpp  008-RecursiveFunction.cpp  CMakeLists.txt
