cmake_minimum_required(VERSION 3.29)
project(exercises)

set(CMAKE_CXX_STANDARD 14)

add_executable(exercises
        001-MultiplyTwoNumbers.cpp
        002-ArrayManualAscendingSort.cpp
        003-DistanceBetweenSums.cpp
        004-RemoveHundreds.cpp
        005-PrintNotPrimeNumbers.cpp
        006-LessThanLastArray.cpp
        007-IncrementOddNumbers.cpp)
